feat: add settings and security api
